[gd_scene format=3 uid="uid://bou3w56xm8geo"]

[ext_resource type="Script" uid="uid://l2t0fq1ep3in" path="res://Scripts/Director.gd" id="1_5nsto"]
[ext_resource type="PackedScene" uid="uid://b2qx3gasbyjlo" path="res://Scenes/HUD.tscn" id="1_45d1s"]
[ext_resource type="PackedScene" uid="uid://8dwo1d2d67qo" path="res://Scenes/upgrade_screen.tscn" id="1_gjpho"]
[ext_resource type="PackedScene" uid="uid://c0jp8fyq4bgcf" path="res://Scenes/GameOverScreen.tscn" id="1_y7y61"]
[ext_resource type="PackedScene" uid="uid://c3qw14r6douqb" path="res://Scenes/Enemy.tscn" id="2_gjpho"]
[ext_resource type="PackedScene" uid="uid://bba1rtjmy8a0l" path="res://Scenes/Player.tscn" id="3_p70al"]
[ext_resource type="Script" uid="uid://xfslssbcxm88" path="res://Scripts/upgrades/UpgradeManager.gd" id="4_mvfa8"]
[ext_resource type="Script" uid="uid://d0cgobcghafpp" path="res://Scripts/upgrades/RunHooks.gd" id="5_p70al"]
[ext_resource type="Script" uid="uid://cpsts44t5urjv" path="res://Scripts/upgrades/UpgradeData.gd" id="5_r0dna"]
[ext_resource type="Resource" uid="uid://bvxj8j5uhqgc3" path="res://Scripts/upgrades/data/move_speed_up.tres" id="6_b5aes"]
[ext_resource type="PackedScene" uid="uid://byujljsy5qhu1" path="res://Scenes/ScreenFader.tscn" id="7_q2d71"]
[ext_resource type="Resource" uid="uid://2b8yk6wvpoul" path="res://Scripts/upgrades/data/fire_rate_up.tres" id="7_w0bku"]
[ext_resource type="Resource" uid="uid://de6beud2jv2ye" path="res://Scripts/upgrades/data/damage_up.tres" id="8_0ao37"]
[ext_resource type="Resource" uid="uid://xfgefhjvboio" path="res://Scripts/upgrades/data/jump_vel.tres" id="9_33kev"]
[ext_resource type="PackedScene" uid="uid://ba768gedrunjg" path="res://Scenes/tower.tscn" id="9_kn06e"]
[ext_resource type="Resource" uid="uid://d2k2mhs35wmmq" path="res://MagicMissile.tres" id="9_ti1bm"]
[ext_resource type="PackedScene" uid="uid://c8a5s64pbm82q" path="res://Scenes/walls.tscn" id="9_uo7di"]
[ext_resource type="Script" uid="uid://d3md8maumdf58" path="res://Scripts/MagicMissile.gd" id="10_8l3nt"]
[ext_resource type="Resource" uid="uid://etcrpyiheqjb" path="res://Scripts/upgrades/data/crit_chance.tres" id="10_g01fq"]
[ext_resource type="PackedScene" uid="uid://ddvujrt0dep5a" path="res://Scenes/MM_SpellProjectile.tscn" id="10_op4cu"]
[ext_resource type="Resource" uid="uid://serm4imhucch" path="res://Scripts/upgrades/data/life_regen.tres" id="11_0bcf6"]
[ext_resource type="PackedScene" uid="uid://chl2k1t6hoxl0" path="res://Scenes/ViewCam.tscn" id="11_7yo87"]
[ext_resource type="PackedScene" uid="uid://b2vd83os48jst" path="res://Scenes/StatBlock.tscn" id="11_r0dna"]
[ext_resource type="Resource" uid="uid://cl1uvsfe0mskq" path="res://Scripts/upgrades/data/life_steal.tres" id="12_y1bqn"]
[ext_resource type="Resource" uid="uid://mgqyvqu7ou5o" path="res://Scripts/upgrades/data/magnet.tres" id="13_7dsfl"]
[ext_resource type="Resource" uid="uid://b5wrv57imlu13" path="res://Scripts/upgrades/data/projectiles.tres" id="14_mq4nq"]
[ext_resource type="Resource" uid="uid://bgw0qphqaux1w" path="res://Scripts/upgrades/data/evasion.tres" id="15_371b6"]
[ext_resource type="Resource" uid="uid://ddbinyqeh7ayu" path="res://Scripts/upgrades/data/max_hp_up.tres" id="16_g01fq"]
[ext_resource type="Script" uid="uid://rq6kh6hqs3pg" path="res://Scenes/DamageNumberSpawner.gd" id="17_0bcf6"]
[ext_resource type="PackedScene" uid="uid://c08axm2ls4whl" path="res://Scenes/ui/DamageNumber3D.tscn" id="18_y1bqn"]
[ext_resource type="Script" uid="uid://dysrr6gfma1s0" path="res://Scripts/debug/SmokeTest.gd" id="31_7dsfl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kn06e"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_7yo87"]
sky_material = SubResource("ProceduralSkyMaterial_kn06e")

[sub_resource type="Environment" id="Environment_ti1bm"]
background_mode = 2
sky = SubResource("Sky_7yo87")
tonemap_mode = 2
fog_mode = 1
fog_light_color = Color(0.43191856, 0.5734833, 0.64844275, 1)
fog_density = 1.0
fog_depth_curve = 0.59460354
fog_depth_begin = 5.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kn06e"]
load_path = "res://.godot/imported/tileable-img_0062-verydark.png-5a2498277c194578928fedad82ed18af.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_45d1s"]
albedo_texture = SubResource("CompressedTexture2D_kn06e")
uv1_scale = Vector3(0.045, 0.045, 0.045)
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_45d1s"]
material = SubResource("StandardMaterial3D_45d1s")
size = Vector2(70, 70)

[sub_resource type="BoxShape3D" id="BoxShape3D_uo7di"]
size = Vector3(70, 0, 70)

[node name="World" type="Node3D" unique_id=453812787]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=214763159]
environment = SubResource("Environment_ti1bm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1884147217]
transform = Transform3D(-0.86708915, -0.434575, 0.24351805, -0.0052823946, 0.4968355, 0.86782867, -0.49812505, 0.7511985, -0.43309623, 0, 28.628138, 0)
layers = 1048575
shadow_enabled = true

[node name="GameStates" type="Node" parent="." unique_id=615229750]

[node name="RunHooks" type="Node" parent="GameStates" unique_id=629901134 node_paths=PackedStringArray("player", "upgrade_screen", "game_over_screen", "screen_fader", "director", "level_system", "stats", "upgrades", "health")]
script = ExtResource("5_p70al")
player = NodePath("../../Player")
upgrade_screen = NodePath("../../UI/UpgradeScreen")
game_over_screen = NodePath("../../UI/GameOverScreen")
screen_fader = NodePath("../../UI/ScreenFader")
director = NodePath("../Director")
level_system = NodePath("../../Player/LevelSystem")
stats = NodePath("../../Player/PlayerStats")
upgrades = NodePath("../UpgradeManager")
health = NodePath("../../Player/PlayerHealth")

[node name="Director" type="Node" parent="GameStates" unique_id=1563088560]
script = ExtResource("1_5nsto")
enemy_scene = ExtResource("2_gjpho")
avoid_mask = 1
avoid_radius = 0.6
ground_body_path = NodePath("../../statics/FloorLayer")

[node name="UpgradeManager" type="Node" parent="GameStates" unique_id=1077308573]
script = ExtResource("4_mvfa8")
all_upgrades = Array[ExtResource("5_r0dna")]([ExtResource("8_0ao37"), ExtResource("7_w0bku"), ExtResource("6_b5aes"), ExtResource("9_33kev"), ExtResource("10_g01fq"), ExtResource("11_0bcf6"), ExtResource("12_y1bqn"), ExtResource("13_7dsfl"), ExtResource("14_mq4nq"), ExtResource("15_371b6"), ExtResource("16_g01fq")])

[node name="DamageNumberSpawner" type="Node" parent="GameStates" unique_id=1977821100]
script = ExtResource("17_0bcf6")
damage_number_scene = ExtResource("18_y1bqn")
use_world_parent = NodePath("../..")

[node name="UI" type="Node" parent="." unique_id=1103826466]

[node name="GameOverScreen" parent="UI" unique_id=1227436529 instance=ExtResource("1_y7y61")]
process_mode = 3

[node name="HUD" parent="UI" unique_id=1975167068 node_paths=PackedStringArray("player") instance=ExtResource("1_45d1s")]
mouse_filter = 2
player = NodePath("../../Player")

[node name="StatBlock" parent="UI/HUD" unique_id=1916233769 node_paths=PackedStringArray("stats") instance=ExtResource("11_r0dna")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
grow_horizontal = 0
grow_vertical = 1
stats = NodePath("../../../Player/PlayerStats")

[node name="UpgradeScreen" parent="UI" unique_id=847933536 instance=ExtResource("1_gjpho")]
process_mode = 3

[node name="ScreenFader" parent="UI" unique_id=243986901 instance=ExtResource("7_q2d71")]
process_mode = 3
visible = false
z_index = -1

[node name="Player" parent="." unique_id=111841163 instance=ExtResource("3_p70al")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.0671177)

[node name="WorldCam" parent="Player/Head" parent_id_path=PackedInt32Array(111841163, 419456813) index="0" unique_id=1011416034]
near = 0.1

[node name="SpellCaster" parent="Player" index="6" unique_id=392683619 node_paths=PackedStringArray("projectile_spell", "camera")]
spell = ExtResource("9_ti1bm")
automatic = null
projectile_spell = NodePath("MagicMissile")
camera = NodePath("../Head/WorldCam")

[node name="MagicMissile" type="Node3D" parent="Player/SpellCaster" index="1" unique_id=1372373660 node_paths=PackedStringArray("camera", "stats")]
script = ExtResource("10_8l3nt")
camera = NodePath("../../Head/WorldCam")
stats = NodePath("../../PlayerStats")
projectile_scene = ExtResource("10_op4cu")
spawn_distance_from_cam = 0.1

[node name="HandsOverlay" type="CanvasLayer" parent="Player" unique_id=1778965903]
layer = -1

[node name="SubViewportContainer" type="SubViewportContainer" parent="Player/HandsOverlay" unique_id=432757317]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Player/HandsOverlay/SubViewportContainer" unique_id=1981594871]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ViewCam" parent="Player/HandsOverlay/SubViewportContainer/SubViewport" unique_id=1319821979 instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="statics" type="Node" parent="." unique_id=1329344165]

[node name="FloorLayer" type="StaticBody3D" parent="statics" unique_id=865853195]
collision_mask = 6

[node name="MeshInstance3D" type="MeshInstance3D" parent="statics/FloorLayer" unique_id=32640974]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.021928787, 0.024451256, -0.013404846)
mesh = SubResource("PlaneMesh_45d1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="statics/FloorLayer" unique_id=427253245]
shape = SubResource("BoxShape3D_uo7di")

[node name="Tower" parent="statics" unique_id=2114612622 instance=ExtResource("9_kn06e")]
transform = Transform3D(2.9722862, 0.40683544, 0, -0.40683544, 2.9722862, 0, 0, 0, 3, 3.415676, -1.26408, -30.695646)

[node name="Tower2" parent="statics" unique_id=1633041765 instance=ExtResource("9_kn06e")]
transform = Transform3D(2.9729638, -0.40046704, 0.033367738, 0.40185475, 2.962697, -0.24685803, 0, 0.24910296, 2.98964, 23, -2.656622, 21)

[node name="Tower3" parent="statics" unique_id=715385468 instance=ExtResource("9_kn06e")]
transform = Transform3D(3, 0, 0, 0, 2.995398, 0.16610526, 0, -0.16610526, 2.995398, -20.29766, -1.5750408, 21)

[node name="Walls" parent="statics" unique_id=1348878863 instance=ExtResource("9_uo7di")]
transform = Transform3D(0.97790015, 0.18379733, 0.09964848, -0.20907243, 0.85968024, 0.46608856, 0, -0.47662184, 0.8791084, 11, -0.11551857, -16)

[node name="Walls2" parent="statics" unique_id=71518215 instance=ExtResource("9_uo7di")]
transform = Transform3D(0.8585664, 0, 0.51270235, 0, 1, 0, -0.51270235, 0, 0.8585664, -10.833212, -0.68736935, 14.4562025)

[node name="Walls3" parent="statics" unique_id=1008833160 instance=ExtResource("9_uo7di")]
transform = Transform3D(0.9779366, 0, 0.20890167, 0, 1, 0, -0.20890167, 0, 0.9779366, -7.31147, 2, -20.057621)

[node name="Walls4" parent="statics" unique_id=1141679315 instance=ExtResource("9_uo7di")]
transform = Transform3D(0.6346361, 0, 0.7728111, 0.18456398, 0.97106344, -0.15156479, -0.75044864, 0.23882158, 0.6162719, 11.004983, 1.0720592, 13.04841)

[node name="SmokeTest" type="Node" parent="." unique_id=1635923893]
script = ExtResource("31_7dsfl")

[editable path="Player"]
